@@ -1,4 +1,11 @@
-﻿[B]Version 2.1.6[/B]
+﻿[B]Version 2.1.9[/B]
+[+] Списки Медиа: Баг-фикс TMDB SSL, нижний переход на следующую страницу
+[+] Списки Медиа: Расширенная информация KickAssSo, EZTV
+[+] Списки Медиа: Добавлен ThePirateBay
+[+] Списки Медиа: Добавлен SWESUB
+[+] Списки Медиа: Дополнительная фраза в вариантах поиска
+
+[B]Version 2.1.6[/B]
 [+] Списки Медиа: Окно информации (пока только KickAssSo). Спасибо evgen_dev
 [+] История Поиска: Перенос в начало списка при повторном поиске
 
